k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: senior-fullstack-backend-hands-on-assessment-insignia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: senior-fullstack-backend-hands-on-assessment-insignia
  template:
    metadata:
      labels:
        app: senior-fullstack-backend-hands-on-assessment-insignia
    spec:
      containers:
        - name: senior-fullstack-backend-hands-on-assessment-insignia
          image: yourdockerusername/senior-fullstack-backend-hands-on-assessment-insignia:latest
          ports:
            - containerPort: 3000
